--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/sd"]
 	path = lib/sd
 	url = https://github.com/carlk3/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico.git
+[submodule "lib/Pico-TMP117-Library"]
+	path = lib/Pico-TMP117-Library
+	url = https://github.com/leafy-psx/Pico-TMP117-Library.git
