--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,8 @@
         "compare": "c",
         "cstdint": "c",
         "ff.h": "c",
-        "sd_card.h": "c"
+        "sd_card.h": "c",
+        "ostream": "c",
+        "f_util.h": "c"
     }
 }
